--- a/.gitignore
+++ b/.gitignore
@@ -227,5 +227,6 @@ $RECYCLE.BIN/
 # Visual Studio 2015/2017 cache/options directory
 .vs/
 
+.env
 
 # End of https://www.gitignore.io/api/node,macos,linux,windows,webstorm,visualstudiocode
